--- a/web/src/components/ProjectSelector.module.css
+++ b/web/src/components/ProjectSelector.module.css
@@ -15,6 +15,9 @@
   transition: all var(--transition-fast);
   min-width: 200px;
   width: 200px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .trigger:hover {
